Minor text changes
Changes to textual content
Removed Facebook link

--- a/index.html
+++ b/index.html
@@ -30,9 +30,6 @@
         </a>
         <a href="https://www.github.com/martyreynoldson" class="hvr-grow">
           <img class="contact-icon" src="assets/img/github-bw-icon.png" title="Github">
-        </a>
-        <a href="https://www.facebook.com/mjreynoldson" class="hvr-grow">
-          <img class="contact-icon" src="assets/img/facebook-bw-icon.png" title="Facebook">
         </a>          
       </div>
     </div>
@@ -52,15 +49,18 @@
      <hr class="small">
      <p style="font-size:26px">
       Hi, my name is Marty and I live in London, England.</p>
-     <p style="font-size:26px">I am a software engineer at <a href="https://en.wikipedia.org/wiki/Royal_Bank_of_Scotland">RBS</a>.
+     <p style="font-size:26px">I am a full stack software engineer at <a href="http://www.rbs.com/">RBS</a>.
      </p>
-     <p style="font-size:20px">I work in a <a href="http://www.investopedia.com/terms/f/frontoffice.asp"><strong><em>front office</em></strong> role</a> <a href="http://www.investopedia.com/terms/f/fixedincome.asp" style="font-size:16px">(fixed income)</a> within RBS's <a href="https://natwestmarkets.com/"><strong><em>investment banking</em></strong> division</a>.
+     <p style="font-size:20px">I work in a <a href="http://www.investopedia.com/terms/f/frontoffice.asp"><strong>front office role</strong></a> within RBS's <a href="https://natwestmarkets.com/natwest-markets/about-us.html"><strong>investment banking division</strong></a>.
      </p>
      <p style="font-size:20px"> 
       In 2015, I graduated from <a href="http://www.lancaster.ac.uk/scc/">Lancaster University</a> with a Masters degree in Computer Science.
      </p>
      <p style="font-size:20px"> 
-      I have a strong background in software engineering, web development and business consultation.
+      I have a strong background in full stack  development and business consultation.
+     </p>
+     <p style="font-size:20px"> 
+      I am interested in emerging technologies, working on challenging problems and I am constantly learning something new.
      </p>
     </div>
     <br><br>
@@ -77,8 +77,8 @@
               <img src="assets/img/rbs-logo.jpg" style="width:100%; height:auto; padding-top:20%" alt="">
           </div>
           <div class="col-md-7 col-sm-12 experience-description">
-              <h3>Royal Bank of Scotland (Aug 2015 - Present)</h3>
-              <p class="experience-text" style="text-align:center"><strong>Front-office software engineer for RBS's investment banking arm - NatWest Markets.</strong><p/>
+              <h3>Software Engineer at Royal Bank of Scotland (Aug 2015 - Present)</h3>
+              <p class="experience-text" style="text-align:center"><strong>Designed and developed compliance and regulatory software solutions e.g. bond allocation rationalization, client activity tracking and dashboard for golden source data.</strong><p/>
                 <p class="experience-text">
                 <strong>Client Meetings Monitor</strong> - Designed and implemented an Outlook add-in that tracks client meeting activity. This saw huge adoption by teams worldwide in both primary and secondary markets.
                 </p>
@@ -98,7 +98,7 @@
    <div class="experience-area hvr-grow">     
       <div class="row wow fadeInRight experience-section" data-wow-delay="0.4s">
           <div class="col-md-7 col-sm-12 experience-description">
-            <h3>DemoPad Ltd. (Jan 2015 - Mar 2015)</h3>
+            <h3>Software Engineer at DemoPad Ltd. (Jan 2015 - Mar 2015)</h3>
             <p class="experience-text" style="text-align:center;">
             <strong>Created software to extend DemoPad's smart home automation environment and capabilities.</strong>
             <p class="experience-text"><strong>Device Drivers</strong> - Implemented device drivers in Lua to integrate lighting (<a href="https://www.rakocontrols.com/">Rako</a>) and thermostat (<a href="https://store.nest.com/uk/product/thermostat?selectedVariantId=T3010GBBI">Nest</a>) control with DemoPad’s flagship smart home automation processor – Centro8.
@@ -118,7 +118,7 @@
             <img class="img" style="width:100%; height:auto; padding-top:10%" src="assets/img/kitchpack-logo.png" alt="">
         </div>
         <div class="col-md-7 col-sm-12 experience-description">
-            <h3>KitchPack Ltd. (Aug 2014 - Sep 2014)</h3>
+            <h3>Technical consultant at KitchPack Ltd. (Aug 2014 - Sep 2014)</h3>
             <p class="experience-text" style="text-align:center"><strong>Provided technical expertise to a company that sells household goods to University students</strong></p>
             <p class="experience-text"><strong>Marketing Strategy</strong> - Discussed potential solutions with the owners to improve company awareness.</p>
             <p class="experience-text"><strong>Web Scraping</strong> - Used Scrapy/Python scripts to accomplish the agreed marketing strategy. Implementation saw sales increase by 35% over the first month and a noticeable increase in feedback via social media.</p>
@@ -129,8 +129,8 @@
    <div class="experience-area hvr-grow">     
     <div class="row wow fadeInLeft experience-section" data-wow-delay="0.4s">
         <div class="col-md-7 col-sm-12 experience-description">
-          <h3><a href="http://www.infolab21.lancs.ac.uk/about/kbc/graduate_academy.php">Lancaster University InfoLab21: Knowledge Business Centre (July 2014 - Sep 2014)</a></h3>
-          <p class="experience-text" style="text-align:center"><strong>EU-Funded project that promotes growth of small to medium-sized business NW-England.</strong></p>
+          <h3><a href="http://www.infolab21.lancs.ac.uk/about/kbc/graduate_academy.php">Software Engineer at Lancaster University InfoLab21: Knowledge Business Centre (July 2014 - Sep 2014)</a></h3>
+          <p class="experience-text" style="text-align:center"><strong>Worked on EU-Funded projects to promote business growth in NW-England.</strong></p>
           <p class="experience-text"><strong>Consultation</strong> - Worked closely with clients to scope their requirements into manageable projects and meet
 specific design and implementation needs.</p>
           <p class="experience-text"><strong>Twitter Report Generator</strong> - Created a bespoke web application with PHP/Laravel. This generated progress
@@ -246,10 +246,7 @@ reports based on the client’s customers’ Twitter activity e.g. tweets, retwe
       Resume |
     </a>
     <a class="body-text" href="https://www.github.com/martyreynoldson" style="color:white">
-      Github |
-    </a>
-    <a class="body-text" href="https://www.facebook.com/mjreynoldson" style="color:white">
-      Facebook
+      Github
     </a>
     <br><br><br>
     <small>Marty J. Reynoldson &copy; 2017</small>
