--- a/index.html
+++ b/index.html
@@ -147,11 +147,28 @@ reports based on the client’s customers’ Twitter activity e.g. tweets, retwe
 
   <section class="projects" id="projects">
     <br><br>
-    <div class="row wow fadeInUp" data-wow-delay="0.2s">
+    <div class="center-div row wow fadeInUp" data-wow-delay="0.2s">
         <div class="col-lg-10 col-lg-offset-1 text-center wow fadeInUp">
           <h2 class="h2_heading">Projects</h2>
           <hr class="small">
           <div class="row">
+
+              <div class="col-md-12 col-sm-12 col-lg-12">
+                <div class="portfolio-box">
+                  <img class="img-portfolio img-responsive" src="assets/img/reactjs-logo.png" style="opacity: 0.5;">
+                  <div class="portfolio-box-caption">
+                      <div class="portfolio-box-caption-content">
+                          <div class="project-category text-faded">
+                             <a href="http://martyreynoldson.com/football-quickscore">Football Quickscore</a> 
+                          </div>
+                          <div class="project-name">
+                              ReactJS Application that pulls together football scores using football-data.org.
+                          </div>
+                      </div>
+                  </div>
+                </div>
+              </div>
+
               <div class="col-md-6">
                 <div class="portfolio-box">
                   <img class="img-portfolio img-responsive" src="assets/img/twitter-logo.png" style="opacity:0.5;">
@@ -198,6 +215,9 @@ reports based on the client’s customers’ Twitter activity e.g. tweets, retwe
       <img src="assets/img/angularjs-logo.png" class="img-tech-logo hvr-grow" title="AngularJS"> 
     </div>
     <div class="col-lg-3 col-md-4 col-sm-12">
+      <img src="assets/img/reactjs-logo.png" class="img-tech-logo hvr-grow" title="ReactJS"> 
+    </div>
+    <div class="col-lg-3 col-md-4 col-sm-12">
       <img src="assets/img/nodejs-logo.png" class="img-tech-logo hvr-grow" title="NodeJS"> 
     </div>
     <div class="col-lg-3 col-md-4 col-sm-12">
@@ -220,9 +240,6 @@ reports based on the client’s customers’ Twitter activity e.g. tweets, retwe
     </div>
     <div class="col-lg-3 col-md-4 col-sm-12">
       <img src="assets/img/sql-logo.png" class="img-tech-logo hvr-grow" title="SQL"> 
-    </div>
-    <div class="col-lg-3 col-md-4 col-sm-12">
-      <img src="assets/img/dotnet-logo.png" class="img-tech-logo hvr-grow" title=".NET"> 
     </div>
     <div class="col-lg-3 col-md-4 col-sm-12">
       <img src="assets/img/cakephp-logo.png" class="img-tech-logo hvr-grow" title="PHP"> 
