--- a/index.html
+++ b/index.html
@@ -147,14 +147,28 @@ reports based on the client’s customers’ Twitter activity e.g. tweets, retwe
 
   <section class="projects" id="projects">
     <br><br>
-    <div class="center-div row wow fadeInUp" data-wow-delay="0.2s">
+    <div class="row wow fadeInUp" data-wow-delay="0.2s">
         <div class="col-lg-10 col-lg-offset-1 text-center wow fadeInUp">
           <h2 class="h2_heading">Projects</h2>
           <hr class="small">
           <div class="row">
 
-              <div class="col-md-12 col-sm-12 col-lg-12">
+              <div class="col-sm-12 col-md-4 col-lg-4">
                 <div class="portfolio-box">
+                  <img class="img-portfolio img-responsive" src="assets/img/twitter-logo.png" style="opacity:0.5;">
+                  <div class="portfolio-box-caption">
+                    <div class="portfolio-box-caption-content">
+                        <div class="project-category text-faded">Twitter Report Generator</div>
+                        <div class="project-name">PHP/Laravel web app that generates reports for Twitter activity e.g. tweets, retweets, followers etc.</div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+
+              <div class="col-sm-12 col-md-4 col-lg-4">
+                <div class="portfolio-box">
+                  
                   <img class="img-portfolio img-responsive" src="assets/img/reactjs-logo.png" style="opacity: 0.5;">
                   <div class="portfolio-box-caption">
                       <div class="portfolio-box-caption-content">
@@ -169,20 +183,7 @@ reports based on the client’s customers’ Twitter activity e.g. tweets, retwe
                 </div>
               </div>
 
-              <div class="col-md-6">
-                <div class="portfolio-box">
-                  <img class="img-portfolio img-responsive" src="assets/img/twitter-logo.png" style="opacity:0.5;">
-                  <div class="portfolio-box-caption">
-                    <div class="portfolio-box-caption-content">
-                        <div class="project-category text-faded">Twitter Report Generator</div>
-                        <div class="project-name">Bespoke web application created with PHP/Laravel. This generates progress
-reports based on the client’s customers’ Twitter activity e.g. tweets, retweets, followers etc.</div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-
-              <div class="col-md-6">
+              <div class="col-sm-12 col-md-4 col-lg-4">
                 <div class="portfolio-box">
                   <img class="img-portfolio img-responsive" src="assets/img/scrapy-logo.png" style="opacity: 0.5;">
                   <div class="portfolio-box-caption">
@@ -191,7 +192,7 @@ reports based on the client’s customers’ Twitter activity e.g. tweets, retwe
                              Automated Spear-phishing System 
                           </div>
                           <div class="project-name">
-                              Designed and implemented a system that crafted spear-phishing email messages based on publicly available information to validate effectiveness.
+                              System capable of crafting spear-phishing email messages based on publicly available information.
                           </div>
                       </div>
                   </div>
