--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
   </div>
     <div class="intro-header">
       <h1 class="h1_home wow fadeIn" data-wow-delay="0.2s">Marty J. Reynoldson</h1>
-      <h2 class="h2_home wow fadeIn" data-wow-delay="0.4s">Software Engineer</h2>
+      <h2 class="h2_home wow fadeIn" data-wow-delay="0.4s">Software Engineer @Expedia Inc.</h2>
+      <h3 class="h3_home wow fadeIn" data-wow-delay="0.6s">Cloud Infrastructure Automation</h3>
       <div class="wow fadeIn display-picture-wrapper" data-wow-delay="0.6s">
         <img src="assets/img/display-picture.jpg" class="img-circle"> 
       </div>
@@ -38,33 +39,9 @@
 
   <div class="col-xs-12 text-center abcen wow fadeIn" data-wow-delay="1.0s">
     <div class="button_down"> 
-      <a class="imgcircle wow bounceInUp" href="#about"> <img class="img_scroll" src="assets/img/arrow_down.png" alt=""> </a>
+      <a class="imgcircle wow bounceInUp" href="#experience"> <img class="img_scroll" src="assets/img/arrow_down.png" alt=""> </a>
     </div>
   </div>
-
-  <section class="about-me" id="about">
-    <br><br>
-    <div class="container wow fadeInUp" data-wow-delay="0.2s">
-     <h2 class="h2_heading">About</h2>
-     <hr class="small">
-     <p style="font-size:26px">
-      Hi, my name is Marty and I live in London, England.</p>
-     <p style="font-size:26px">I am a full stack software engineer at <a href="http://www.rbs.com/">RBS</a>.
-     </p>
-     <p style="font-size:20px">I work in a <a href="http://www.investopedia.com/terms/f/frontoffice.asp"><strong>front office role</strong></a> within RBS's <a href="https://natwestmarkets.com/natwest-markets/about-us.html"><strong>investment banking division</strong></a>.
-     </p>
-     <p style="font-size:20px"> 
-      In 2015, I graduated from <a href="http://www.lancaster.ac.uk/scc/">Lancaster University</a> with a Masters degree in Computer Science.
-     </p>
-     <p style="font-size:20px"> 
-      I have a strong background in full stack  development and business consultation.
-     </p>
-     <p style="font-size:20px"> 
-      I am interested in emerging technologies, working on challenging problems and I am constantly learning something new.
-     </p>
-    </div>
-    <br><br>
-  </section>
    
  <section class="experience" id="experience">
    <br><br>
