Update skill images

--- a/index.html
+++ b/index.html
@@ -205,10 +205,10 @@ reports based on the client’s customers’ Twitter activity e.g. tweets, retwe
       <img src="assets/img/python-logo.png" class="img-tech-logo hvr-grow" title="Python"> 
     </div>
     <div class="col-lg-3 col-md-4 col-sm-12">
-      <img src="assets/img/html-logo.png" class="img-tech-logo hvr-grow" title="HTML5"> 
+      <img src="assets/img/ruby-logo.png" class="img-tech-logo hvr-grow" title="HTML5"> 
     </div>
     <div class="col-lg-3 col-md-4 col-sm-12">
-      <img src="assets/img/javascript-logo.png" class="img-tech-logo hvr-grow" title="JavaScript"> 
+      <img src="assets/img/aws-logo.png" class="img-tech-logo hvr-grow" title="JavaScript"> 
     </div>
     <div class="col-lg-3 col-md-4 col-sm-12">
       <img src="assets/img/android-logo.png" class="img-tech-logo hvr-grow" title="Android"> 
@@ -217,10 +217,10 @@ reports based on the client’s customers’ Twitter activity e.g. tweets, retwe
       <img src="assets/img/lua-logo.png" class="img-tech-logo hvr-grow"title="Lua"> 
     </div>
     <div class="col-lg-3 col-md-4 col-sm-12">
-      <img src="assets/img/sql-logo.png" class="img-tech-logo hvr-grow" title="SQL"> 
+      <img src="assets/img/html-logo.png" class="img-tech-logo hvr-grow" title="SQL"> 
     </div>
     <div class="col-lg-3 col-md-4 col-sm-12">
-      <img src="assets/img/cakephp-logo.png" class="img-tech-logo hvr-grow" title="PHP"> 
+      <img src="assets/img/javascript-logo.png" class="img-tech-logo hvr-grow" title="PHP"> 
     </div>
   </div>
   <br><br>
